--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           class="w-full text-sm px-3 focus:shadow-md password-input py-2 ring ring-gray-400 rounded-sm focus:outline-none focus:ring-2 focus:ring-gray-700"
           placeholder="Password"
         />
-        <span
+        <div
           class="toggle-btn absolute right-4 top-[50%] translate-y-[-50%] cursor-pointer"
         >
           <svg
@@ -148,7 +148,7 @@
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
-            class="lucide lucide-eye-off-icon lucide-eye-off w-4 h-4 text-gray-500 pointer-events-none"
+            class="lucide lucide-eye-off-icon lucide-eye-off w-4 h-4 text-gray-500"
           >
             <path
               d="M10.733 5.076a10.744 10.744 0 0 1 11.205 6.575 1 1 0 0 1 0 .696 10.747 10.747 0 0 1-1.444 2.49"
@@ -169,14 +169,14 @@
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
-            class="lucide lucide-eye-icon lucide-eye w-4 h-4 text-gray-700 pointer-events-none"
+            class="lucide lucide-eye-icon lucide-eye w-4 h-4 text-gray-700"
           >
             <path
               d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
             />
             <circle cx="12" cy="12" r="3" />
           </svg>
-        </span>
+        </div>
       </div>
 
       <button
